dbeaver/pro#1338 code style